Temporary hacky spacing fix for sites without top menu.

--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -86,3 +86,17 @@
     margin-top: none;
   }
 }
+
+.logged-in {
+  .header + #slider,
+  .header + #main-content {
+    padding-top: 56px;
+  }
+}
+
+.not-logged-in 
+  .header + #slider,
+  .header + #main-content {
+    padding-top: 76px;
+  }
+}
